--- a/employee.html
+++ b/employee.html
@@ -150,7 +150,7 @@
                                 <ul class="pull-right dropdown-menu dropdown-arrow dropdown-messages">
                                     <li>
                                         <a href="#">
-                                            <img src="assets/img/avatars/divyia.jpg" class="message-avatar" alt="Divyia Austin">
+                                            <img src="assets/img/user.png" class="message-avatar" alt="Divyia Austin">
                                             <div class="message">
                                                 <span class="message-sender">
                                                     Divyia Austin
@@ -169,7 +169,7 @@
                                     </li>
                                     <li>
                                         <a href="#">
-                                            <img src="assets/img/avatars/bing.png" class="message-avatar" alt="Microsoft Bing">
+                                            <img src="assets/img/user.png" class="message-avatar" alt="Microsoft Bing">
                                             <div class="message">
                                                 <span class="message-sender">
                                                     Bing.com
@@ -188,7 +188,7 @@
                                     </li>
                                     <li>
                                         <a href="#">
-                                            <img src="assets/img/avatars/adam-jansen.jpg" class="message-avatar" alt="Divyia Austin">
+                                            <img src="assets/img/user.png" class="message-avatar" alt="Divyia Austin">
                                             <div class="message">
                                                 <span class="message-sender">
                                                     Nicolas
@@ -350,7 +350,7 @@
                                     </label>
                                   </td>
                                   <td class="text-center">
-                                    <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Edit" class="fa fa-pencil-square-o edit edit-fa" aria-describedby="tooltip708883"></a>
+                                    <a href="edit-employee.html" data-toggle="tooltip" data-placement="top" data-original-title="Edit" class="fa fa-pencil-square-o edit edit-fa" aria-describedby="tooltip708883"></a>
                                       <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Delete" class="fa fa-trash delete edit-fa"></a>
                                   </td>
                                 </tr>
@@ -369,7 +369,7 @@
                                     </label>
                                   </td>
                                   <td class="text-center">
-                                      <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Edit" class="fa fa-pencil-square-o edit edit-fa" aria-describedby="tooltip708883"></a>
+                                      <a href="edit-employee.html" data-toggle="tooltip" data-placement="top" data-original-title="Edit" class="fa fa-pencil-square-o edit edit-fa" aria-describedby="tooltip708883"></a>
                                       <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Delete" class="fa fa-trash delete edit-fa"></a>
                                   </td>
                                 </tr>
@@ -388,7 +388,7 @@
                                     </label>
                                   </td>
                                   <td class="text-center">
-                                    <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Edit" class="fa fa-pencil-square-o edit edit-fa" aria-describedby="tooltip708883"></a>
+                                    <a href="edit-employee.html" data-toggle="tooltip" data-placement="top" data-original-title="Edit" class="fa fa-pencil-square-o edit edit-fa" aria-describedby="tooltip708883"></a>
                                       <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Delete" class="fa fa-trash delete edit-fa"></a>
                                   </td>
                                 </tr>
