--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <ul class="pull-right dropdown-menu dropdown-arrow dropdown-messages">
                   <li>
                     <a href="#">
-                      <img src="assets/img/avatars/divyia.jpg" class="message-avatar" alt="Divyia Austin">
+                      <img src="assets/img/user.png" class="message-avatar" alt="Divyia Austin">
                       <div class="message">
                         <span class="message-sender">
                           Divyia Austin
@@ -168,7 +168,7 @@
                   </li>
                   <li>
                     <a href="#">
-                      <img src="assets/img/avatars/bing.png" class="message-avatar" alt="Microsoft Bing">
+                      <img src="assets/img/user.png" class="message-avatar" alt="Microsoft Bing">
                       <div class="message">
                         <span class="message-sender">
                           Bing.com
@@ -187,7 +187,7 @@
                   </li>
                   <li>
                     <a href="#">
-                      <img src="assets/img/avatars/adam-jansen.jpg" class="message-avatar" alt="Divyia Austin">
+                      <img src="assets/img/user.png" class="message-avatar" alt="Divyia Austin">
                       <div class="message">
                         <span class="message-sender">
                           Nicolas
@@ -402,11 +402,11 @@
                           </thead>
                           <tbody>
                             <tr>
-                              <td>05-03-18</td>
+                              <td>03-03-18</td>
                               <td>Foundation</td>
                               <td>Public Information</td>
                               <td class="green">Approved </td>
-                              <td>05-05-18 5:30 AM</td>
+                              <td>03-04-18 5:30 AM</td>
                               <td>James</td>
                               <td>
                                 <label class="switch-btn switch-flat">
@@ -422,7 +422,7 @@
                               </td>
                             </tr>
                             <tr>
-                              <td>11-03-18</td>
+                              <td>04-03-18</td>
                               <td>Compliance</td>
                               <td>eCommerce</td>
                               <td class="red">Rejected</td>
@@ -442,11 +442,11 @@
                               </td>
                             </tr>
                             <tr>
-                              <td>22-03-18</td>
+                              <td>04-15-18</td>
                               <td>Custom</td>
                               <td>Public Information</td>
                               <td class="green">Approved</td>
-                              <td>05-05-18 5:30 AM</td>
+                              <td>04-16-18 3:30 PM</td>
                               <td>Riya</td>
                               <td>
                                 <label class="switch-btn switch-flat">
