--- a/employee-report-upload.html
+++ b/employee-report-upload.html
@@ -151,7 +151,7 @@
                 <ul class="pull-right dropdown-menu dropdown-arrow dropdown-messages">
                   <li>
                     <a href="#">
-                      <img src="assets/img/avatars/divyia.jpg" class="message-avatar" alt="Divyia Austin">
+                      <img src="assets/img/user.png" class="message-avatar" alt="Divyia Austin">
                       <div class="message">
                         <span class="message-sender">
                           Divyia Austin
@@ -170,7 +170,7 @@
                   </li>
                   <li>
                     <a href="#">
-                      <img src="assets/img/avatars/bing.png" class="message-avatar" alt="Microsoft Bing">
+                      <img src="assets/img/user.png" class="message-avatar" alt="Microsoft Bing">
                       <div class="message">
                         <span class="message-sender">
                           Bing.com
@@ -189,7 +189,7 @@
                   </li>
                   <li>
                     <a href="#">
-                      <img src="assets/img/avatars/adam-jansen.jpg" class="message-avatar" alt="Divyia Austin">
+                      <img src="assets/img/user.png" class="message-avatar" alt="Divyia Austin">
                       <div class="message">
                         <span class="message-sender">
                           Nicolas
