--- a/research-intake-form.html
+++ b/research-intake-form.html
@@ -155,7 +155,7 @@
                 <ul class="pull-right dropdown-menu dropdown-arrow dropdown-messages">
                   <li>
                     <a href="#">
-                      <img src="assets/img/avatars/divyia.jpg" class="message-avatar" alt="Divyia Austin">
+                      <img src="assets/img/user.png" class="message-avatar" alt="Divyia Austin">
                       <div class="message">
                         <span class="message-sender">
                           Divyia Austin
@@ -174,7 +174,7 @@
                   </li>
                   <li>
                     <a href="#">
-                      <img src="assets/img/avatars/bing.png" class="message-avatar" alt="Microsoft Bing">
+                      <img src="assets/img/user.png" class="message-avatar" alt="Microsoft Bing">
                       <div class="message">
                         <span class="message-sender">
                           Bing.com
@@ -193,7 +193,7 @@
                   </li>
                   <li>
                     <a href="#">
-                      <img src="assets/img/avatars/adam-jansen.jpg" class="message-avatar" alt="Divyia Austin">
+                      <img src="assets/img/user.png" class="message-avatar" alt="Divyia Austin">
                       <div class="message">
                         <span class="message-sender">
                           Nicolas
