some files changed.

--- a/client.html
+++ b/client.html
@@ -3,7 +3,7 @@
 <!-- Head -->
 <head>
     <meta charset="utf-8" />
-    <title>CLient</title>
+    <title>Client</title>
 
     <meta name="description" content="user profile" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -134,7 +134,7 @@
                                             Today, March 28
                                         </span>
                                         <span class="pull-right">
-                                            10°c
+
                                             <i class="wi wi-cloudy"></i>
                                         </span>
                                     </li>
@@ -331,6 +331,7 @@
                                   <th>Emai Id</th>
                                   <th>PNO</th>
                                   <th>Country</th>
+                                  <th>Previous Orders</th>
                                   <th>Suspend</th>
                                   <th>Action</th>
                                 </tr>
@@ -344,6 +345,7 @@
                                   <td>Jone.Lee@vsplash.com</td>
                                   <td>(541) 754-3010</td>
                                   <td>US</td>
+                                  <td class="text-center"><a href="previousorders.html">5</a></td>
                                   <td>
                                     <label class="switch-btn switch-flat">
                                     	<input class="switch-input" type="checkbox" />
@@ -363,6 +365,7 @@
                                   <td>James.strok@vsplash.com</td>
                                   <td>(541) 754-3010</td>
                                   <td>US</td>
+                                  <td class="text-center"><a href="previousorders.html">3</a></td>
                                   <td>
                                     <label class="switch-btn switch-flat">
                                     	<input class="switch-input" type="checkbox" />
@@ -382,6 +385,7 @@
                                   <td>kane@vsplash.com</td>
                                   <td>(541) 754-3010</td>
                                   <td>US</td>
+                                  <td class="text-center"><a href="previousorders.html">2</a></td>
                                   <td>
                                     <label class="switch-btn switch-flat">
                                     	<input class="switch-input" type="checkbox" />
