--- a/research-intake-form.html
+++ b/research-intake-form.html
@@ -139,7 +139,7 @@
                       Today, March 28
                     </span>
                     <span class="pull-right">
-                      10°c
+
                       <i class="wi wi-cloudy"></i>
                     </span>
                   </li>
@@ -481,7 +481,7 @@
                 <div class="row">
                   <div class="col-sm-4">
                     <div class="form-group">
-                      <label for="inputsm">Primary Competitors</label>
+                      <label for="inputsm">Primary Competitors 1</label>
                       <span class="input-icon icon-right">
                         <input =="text" class="form-control">
                       </span>
@@ -489,7 +489,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="form-group">
-                      <label for="inputsm">&nbsp;</label>
+                      <label for="inputsm">Primary Competitors 2</label>
                       <span class="input-icon icon-right">
                         <input =="text" class="form-control">
                       </span>
@@ -497,7 +497,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="form-group">
-                      <label for="inputsm">&nbsp;</label>
+                      <label for="inputsm">Primary Competitors 3</label>
                       <span class="input-icon icon-right">
                         <input =="text" class="form-control">
                       </span>
