--- a/login.html
+++ b/login.html
@@ -24,13 +24,14 @@
   <link href="assets/css/demo.min.css" rel="stylesheet" />
   <link href="assets/css/animate.min.css" rel="stylesheet" />
   <link href="assets/css/custom.css" rel="stylesheet" />
-
+<style>
+</style>
   <!--Skin Script: Place this script in head to load scripts for skins and rtl support-->
   <script src="assets/js/skins.min.js"></script>
 </head>
 <!--Head Ends-->
 <!--Body-->
-<body>
+<body class="fullscreen_bg">
   <div class="login-container animated fadeInDown">
     <div class="loginbox bg-darkgray" id="login">
       <div class="log-reg-img">
