files are updated

--- a/client-order-details.html
+++ b/client-order-details.html
@@ -134,7 +134,7 @@
                       Today, March 28
                     </span>
                     <span class="pull-right">
-                      
+
                       <i class="wi wi-cloudy"></i>
                     </span>
                   </li>
@@ -371,7 +371,7 @@
                   </div>
                 </div>
               </div>
-              <a type="submit" href="" class="btn cust-btn"><span class="fa fa-money"></span>Proceeded to Pay</a>
+              <a type="submit" href="paymentinfo.html" class="btn cust-btn"><span class="fa fa-money"></span>Proceeded to Pay</a>
               <div class="form-title">
                 Sub Order Information
               </div>
@@ -387,7 +387,6 @@
                           <th>Effort Hours</th>
                           <th>Additional Informatin</th>
                           <th>Acceptance</th>
-                          <th>Action</th>
                         </tr>
                       </thead>
                       <tbody>
@@ -397,15 +396,12 @@
                           <td>$500</td>
                           <td>60</td>
                           <td>We are providing additional informatio to proccess data. </td>
-                          <td><div class="checkbox">
+                          <td class="width-130"><div class="checkbox">
                             <label>
                               <input type="checkbox" class="colored-primary" id="terms-conditions" checked="">
                               <span class="text darkgray">Accept suborder</span>
                             </label>
                           </div>
-                        </td>
-                        <td>
-                          <a data-toggle="tooltip" data-placement="top" data-original-title="Proceeded to Pay" class="fa fa-money edit payment-fa"></a>
                         </td>
                       </tr>
                     </tr>
