--- a/client-profile.html
+++ b/client-profile.html
@@ -134,7 +134,7 @@
                                             Today, March 28
                                         </span>
                                         <span class="pull-right">
-                                            
+
                                             <i class="wi wi-cloudy"></i>
                                         </span>
                                     </li>
@@ -310,7 +310,10 @@
                                     <div class="col-lg-10 col-md-8 col-sm-12 profile-info">
                                         <div class="header-fullname">James Smith</div>
                                         <div class="header-information">
-                                            Kim is a software developer in Microsoft. She works in ASP.NET MVC Team and collaborates with other teams.
+                                          <p>Kim is a software developer in Microsoft. She works in ASP.NET MVC Team and collaborates with other teams.</p>
+                                          <div class="edit-profile-text" style="display:none;">
+                                            <textarea class="form-control" rows="3" id="form-field-8"></textarea>
+                                          </div>
                                         </div>
                                     </div>
                                 </div>
